projects/vb6parse/snapshots/syntax/statements/system_interaction/unload/unload_preserves_whitespace.snap
---
source: projects/vb6parse/src/syntax/statements/system_interaction/unload.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: UnloadStatement
      children:
        - kind: UnloadKeyword
          text: Unload
        - kind: Whitespace
          text: "    "
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: Form1
    - kind: Whitespace
      text: "    "
    - kind: Newline
      text: "\n"
